src/content/docs/sdk/android/v5/features/ad-revenue-ja.mdx
---
title: 広告収益情報を送信する
description: Adjust SDKを使用して、サポートされているネットワークパートナーの広告収益情報を送信します。
slug: ja/sdk/android/features/ad-revenue
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /ja/sdk/android/v4/features/ad-revenue
---

Adjust SDKを使用して、[サポートされているネットワークパートナー](https://help.adjust.com/ja/article/ad-revenue)の広告収益を記録することができます。

<Callout type="important">

広告収益を計測するには、Adjustのダッシュボードで行っていただく追加ステップがあります。担当のテクニカルアカウントマネージャーまたは[support@adjust.com](mailto:support@adjust.com)にお問い合わせください。

</Callout>

## AdjustAdRevenueオブジェクトをインスタンス化する {#instantiate-an-adjustadrevenue-object}

<CodeBlock title="メソッドシグネチャー">

```java
public AdjustAdRevenue(final String source)
```

</CodeBlock>

Adjust SDKで広告収益情報を送信するには、`AdjustAdRevenue`オブジェクトをインスタンス化する必要があります。このオブジェクトには、アプリで広告収益が記録されたときにAdjustに送信される変数が含まれます。

広告収益オブジェクトをインスタンス化するには、新しい`AdjustAdRevenue`インスタンスを作成して以下のパラメーターをパスしてください：

-  `source` （`String`）：広告収益のソース。利用可能なソースについては、以下の表を参照してください。

<Table>

| 引数                      | 広告収益ソース    |
| ------------------------- | ----------------- |
| `"applovin_max_sdk"`      | AppLovin MAX      |
| `"admob_sdk"`             | AdMob             |
| `"ironsource_sdk"`        | ironSource        |
| `"admost_sdk"`            | Admost            |
| `"unity_sdk"`             | Unity             |
| `"helium_chartboost_sdk"` | Helium Chartboost |
| `"adx_sdk"`               | Ad\(X\)           |
| `"publisher_sdk"`         | 汎用ソース        |
| `"tradplus_sdk"`          | TradPlus          |
| `"topon_sdk"`             | TopOn             |
| `"mopub"`                 | MoPub             |

</Table>
<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

## 広告収益の送信 {#send-ad-revenue}

<CodeBlock title="メソッドシグネチャー">

```java
public static void trackAdRevenue(AdjustAdRevenue adRevenue)
```

</CodeBlock>

広告収益をAdjustに送信するには、広告収益のインスタンスを引数として`trackAdRevenue`メソッドを呼び出します。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java" >

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
</Tabs>

## 広告収益額を記録する {#record-ad-revenue-amount}

<CodeBlock title="メソッドシグネチャー">

```java
public void setRevenue(final Double revenue, final String currency)
```

</CodeBlock>

広告収益額を送信するには、`setRevenue`メソッドを呼び出し、以下の引数をパスします：

-  `revenue` `Double`）：収益額
-  `currency` （`String`）：レポート通貨の3桁の[ISO 4217コード](https://www.iban.com/currency-codes)

<Callout type="seealso">

詳細は、[異なる通貨での購入記録](https://help.adjust.com/ja/article/currency-conversion)に関するガイドをご覧ください。

</Callout>
<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
adjustAdRevenue.setRevenue(1.00, "EUR")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.setRevenue(1.00, "EUR");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

## 広告キャンペーンの詳細を記録する {#record-ad-campaign-details}

`AdjustAdRevenue`クラスには、広告キャンペーンのレポート作成に使用できるプロパティが含まれています。

### 広告インプレッション数 {#ad-impressions}

<CodeBlock title="メソッドシグネチャー">

```java
public void setAdImpressionsCount(final Integer adImpressionsCount)
```

</CodeBlock>

記録された広告インプレッションを送信するには、`setAdImpressionsCount`メソッドを呼び出し、以下の引数をパスします：

-  `adImpressionsCount` （`Integer`）：広告インプレッションの数。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
adjustAdRevenue.setAdImpressionsCount(10)
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.setAdImpressionsCount(10);
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

### 広告収益ネットワーク {#ad-revenue-network}

<CodeBlock title="メソッドシグネチャー">

```java
public void setAdRevenueNetwork(final String adRevenueNetwork)
```

</CodeBlock>

広告収益ネットワークを送信するには、`setAdRevenueNetwork`メソッドを呼び出し、以下の引数をパスします：

-  `adRevenueNetwork` （`String`）：ネットワーク名

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
adjustAdRevenue.setAdRevenueNetwork("network1")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.setAdRevenueNetwork("network1");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

### 広告収益ユニット {#ad-revenue-unit}

<CodeBlock title="メソッドシグネチャー">

```java
public void setAdRevenueUnit(final String adRevenueUnit)
```

</CodeBlock>

広告収益ユニットを送信するには、`setAdRevenueUnit`メソッドを呼び出し、以下の引数をパスします：

-  `adRevenueUnit` （`String`）：広告ユニット

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
adjustAdRevenue.setAdRevenueUnit("unit1")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.setAdRevenueUnit("unit1");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

### 広告収益の配置 {#ad-revenue-placement}

<CodeBlock title="メソッドシグネチャー">

```java
public void setAdRevenuePlacement(final String adRevenuePlacement)
```

</CodeBlock>

広告収益の配置を送信するには、`setAdRevenuePlacement`メソッドを呼び出し、以下の引数をパスします：

-  `adRevenuePlacement` （`String`）：広告配置

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
adjustAdRevenue.setAdRevenuePlacement("banner")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.setAdRevenuePlacement("banner");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

## コールバックパラメーターを追加する {#add-callback-parameters}

<CodeBlock title="メソッドシグネチャー">

```java
public void addCallbackParameter(final String key, final String value)
```

</CodeBlock>

Adjustダッシュボードで[コールバックURLを登録](https://help.adjust.com/ja/article/recommended-placeholders-callbacks)した場合、SDKがイベントを記録する際にコールバックURLにGETリクエストを送信します。

コールバックパラメーターをサーバーに設定できます。イベントにパラメーターを設定すると、SDKはそれらを[コールバックURL](https://help.adjust.com/ja/article/raw-data-exports)に追加します。この情報を使用して、自社のBIシステムでユーザーのアプリ内行動を分析することが可能です。

イベントにコールバックパラメーターを追加するには、`String` key\-value引数を指定して`addCallbackParameter`メソッドを呼び出してください。このメソッドを複回呼び出すことで、複数のパラメーターを追加することができます。

Adjust SDKはイベントを計測し、コールバックパラメーターが追加されたURLにリクエストを送信します。例えば、URL `https://www.mydomain.com/callback`が登録されている場合、コールバックは以下のようになります：

<CodeBlock highlight="key=value, foo=bar">

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

</CodeBlock>
<Callout type="note">

Adjustは、カスタムコールバックパラメーターを保存しません。カスタムパラメーターは、コールバックURLにのみ追加されます。

</Callout>

CSVレポートを使用している場合、CSVの定義欄にパラメーターを追加するようにしてください。

Adjustでは、SDKからURLに情報をパスするための様々なプレースホルダーをサポートしています。例えば、iOSの`{idfa}`プレースホルダーやAndroidの`{gps_adid}`プレースホルダーなどです。`{publisher_parameter}`プレースホルダーは、単一の文字列での全てのコールバックパラメーターを表示します。

<Callout type="seealso">

使用可能な値の全リストを含むURLコールバックの詳細については、[コールバックガイド](https://help.adjust.com/ja/article/callbacks)をご覧ください。

</Callout>
<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
adjustAdRevenue.addCallbackParameter("key", "value")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.addCallbackParameter("key", "value");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

## パートナーパラメーターの追加 {#add-partner-parameters}

<CodeBlock title="メソッドシグネチャー">

```java
public void addPartnerParameter(String key, String value)
```

</CodeBlock>

[パートナーパラメーター](https://help.adjust.com/ja/article/data-sharing-ad-network#map-parameters)を追加することで、ネットワークパートナーに追加情報を送信することができます。

Adjustは、設定した[外部パートナー](https://help.adjust.com/ja/article/integrated-partners)にパートナーパラメーターを送信します。この情報は、より詳細な分析やリターゲティング施策にご利用いただけます。パートナー用にパラメーターの設定が完了し、機能が有効化されると、Adjustのサーバーはデータ転送を開始します。

<Callout type="note">

パートナーパラメーターはデフォルトではローデータに表示されません。ご希望の場合は、プレースホルダー`{partner_parameters}`を追加することで、それらを単一の文字列として受信することができます。

</Callout>

イベントにパートナーパラメーターを追加するには、`String` key\-value引数を指定して`addPartnerParameter`メソッドを呼び出してください。このメソッドを複回呼び出すことで、複数のパラメーターを追加することができます。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue("applovin_max_sdk")
adjustAdRevenue.addPartnerParameter("key", "value")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue("applovin_max_sdk");
adjustAdRevenue.addPartnerParameter("key", "value");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>

## 例 {#example}

この例では、以下のプロパティを含む広告収益オブジェクトを設定し、記録する方法を示しています：

-  収益ソースをAppLovin MAXとする
-  収益額を1 Euroとする
-  10広告インプレッション数
-  広告収益ネットワークを _`"network1"`_ とする
-  広告収益ユニットを _`"unit1"`_ とする
-  広告収益の配置を _`"banner"`_ とする
-  コールバックパラメーター： `"key1" = "value1"`
-  パートナーパラメーター： `"key2" = "value2"`

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustAdRevenue = AdjustAdRevenue(AdjustConfig.AD_REVENUE_APPLOVIN_MAX)
adjustAdRevenue.setRevenue(1.00, "EUR")
adjustAdRevenue.setAdImpressionsCount(10)
adjustAdRevenue.setAdRevenueNetwork("network1")
adjustAdRevenue.setAdRevenueUnit("unit1")
adjustAdRevenue.setAdRevenuePlacement("banner")
adjustAdRevenue.addCallbackParameter("key1", "value1")
adjustAdRevenue.addPartnerParameter("key2", "value2")
Adjust.trackAdRevenue(adjustAdRevenue)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustAdRevenue adjustAdRevenue = new AdjustAdRevenue(AdjustConfig.AD_REVENUE_APPLOVIN_MAX);
adjustAdRevenue.setRevenue(1.00, "EUR");
adjustAdRevenue.setAdImpressionsCount(10);
adjustAdRevenue.setAdRevenueNetwork("network1");
adjustAdRevenue.setAdRevenueUnit("unit1");
adjustAdRevenue.setAdRevenuePlacement("banner");
adjustAdRevenue.addCallbackParameter("key1", "value1");
adjustAdRevenue.addPartnerParameter("key2", "value2");
Adjust.trackAdRevenue(adjustAdRevenue);
```

</Tab>
</Tabs>
